# ultrasql

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BETA_READINESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DONE.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE  OPERATIONS.md  PERFORMANCE.md  README.md  RFC_PROCESS.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  TODO.md  benchmark_results.txt  clippy.toml  deny.toml  mkdocs.yml  rust-toolchain.toml  rustfmt.toml  stress_check_32.py
crates/ultrasql-arrow/: Cargo.toml
crates/ultrasql-arrow/src/: lib.rs
crates/ultrasql-bench/: Cargo.toml
crates/ultrasql-bench/benches/: push_vs_pull.rs  v07_vectorized.rs
crates/ultrasql-bench/src/: ai_gauntlet.rs  ann_vector.rs  lib.rs  main.rs  registry.rs  sysbench_wire.rs  tpcb_wire.rs  tpcc_wire.rs
crates/ultrasql-bench/tests/: ai_benchmark_gauntlet_script.rs  ann_vector_artifact.rs  benchmark_profiles.rs  between_e2e.rs  csv_benchmark_gauntlet_script.rs  firebolt_benchmark_script.rs  honesty.rs  public_arena_script.rs  readme_benchmark_snapshot.rs  release_hardening.rs  roadmap_truth.rs  scale_sweep_release_artifact.rs  vector_topk_benchmark_script.rs
crates/ultrasql-catalog/: Cargo.toml
crates/ultrasql-catalog/benches/: persistent_catalog.rs
crates/ultrasql-catalog/src/: bootstrap.rs  encoding.rs  entry.rs  error.rs  information_schema.rs  lib.rs  memory.rs  persistent.rs  rag.rs  traits.rs  views.rs
crates/ultrasql-catalog/tests/: rag_primitives.rs
crates/ultrasql-cli/: Cargo.toml
crates/ultrasql-cli/src/: main.rs
crates/ultrasql-cli/tests/: local_mode.rs
crates/ultrasql-core/: Cargo.toml
crates/ultrasql-core/src/: bit_string.rs  bpchar.rs  cache.rs  constants.rs  csv.rs  decimal.rs  endian.rs  error.rs  fsync.rs  id.rs  lib.rs  money.rs  network.rs  schema.rs  types.rs  value.rs
crates/ultrasql-executor/: Cargo.toml
crates/ultrasql-executor/benches/: v05_operators.rs
crates/ultrasql-executor/src/: affected_rows.rs  aggregate_math.rs  bitmap_heap_scan.rs  cte_scan.rs  direct_scalar_agg.rs  distinct_on.rs  eval.rs  filter.rs  filter_op.rs  filter_sum_op.rs  function_scan.rs  fused_delete.rs  fused_insert.rs  fused_update.rs  gather.rs  hash_aggregate.rs  hash_join.rs  hybrid_search.rs  index_scan.rs  join_layout.rs  json_path.rs  lib.rs  limit.rs  lock_rows.rs  materialize.rs  mem_table_scan.rs  merge_join.rs  modify.rs  nested_loop_join.rs  parallel_seq_scan.rs  physical.rs  pivot.rs  profile.rs  project.rs  project_expr.rs  push_pipeline.rs  result_op.rs  row_codec.rs  row_spill.rs  seq_scan.rs  (+11 more)
crates/ultrasql-iceberg/: Cargo.toml
crates/ultrasql-iceberg/src/: lib.rs
crates/ultrasql-mvcc/: Cargo.toml
crates/ultrasql-mvcc/src/: lib.rs  snapshot.rs  status.rs  tuple_header.rs  visibility.rs
crates/ultrasql-node/: Cargo.toml
crates/ultrasql-node/src/: lib.rs
crates/ultrasql-objectstore/: Cargo.toml
crates/ultrasql-objectstore/src/: lib.rs
crates/ultrasql-optimizer/: Cargo.toml
crates/ultrasql-optimizer/benches/: optimizer_rules.rs
crates/ultrasql-optimizer/src/: error.rs  lib.rs  plan_cache.rs
crates/ultrasql-optimizer/tests/: outer_join_reorder.rs
crates/ultrasql-parser/: Cargo.toml
crates/ultrasql-parser/src/: ast.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/ultrasql-planner/: Cargo.toml
crates/ultrasql-planner/src/: binder.rs  catalog.rs  error.rs  expr.rs  lib.rs  plan.rs  scope.rs
crates/ultrasql-protocol/: Cargo.toml
crates/ultrasql-protocol/src/: codec.rs  error.rs  lib.rs  messages.rs
crates/ultrasql-server/: Cargo.toml
crates/ultrasql-server/src/: aggregating_index.rs  cached_select.rs  cancel.rs  catalog_version.rs  columnar_storage.rs  combined_catalog.rs  config.rs  copy.rs  embedded.rs  error.rs  extended.rs  index_key.rs  lib.rs  main.rs  memory_admission.rs  metadata_io.rs  metadata_scalar.rs  metadata_tokens.rs  metadata_view.rs  notify.rs  page_loader.rs  pipeline.rs  projection_summary.rs  recovery_target.rs  replication.rs  result_encoder.rs  runtime_index.rs  runtime_types.rs  search_path.rs  serializable.rs  server_index_rebuild.rs  server_lifecycle.rs  server_loop.rs  server_maintenance.rs  server_meta_domain_table.rs  server_meta_rls_view.rs  server_meta_role_priv.rs  server_meta_seq_schema_op.rs  server_recovery_rebuild.rs  server_wal_recovery.rs  (+10 more)
crates/ultrasql-server/tests/: advisory_lock_round_trip.rs  aggregating_index_aborted_writer_round_trip.rs  aggregating_index_round_trip.rs  alter_restart_round_trip.rs  alter_table_round_trip.rs  analyze_round_trip.rs  array_multidim_round_trip.rs  autovacuum_reloptions_round_trip.rs  bit_varbit_round_trip.rs  bpchar_round_trip.rs  btree_restart_round_trip.rs  bytea_round_trip.rs  cancel_request_round_trip.rs  case_common_type_round_trip.rs  catalog_version_round_trip.rs  catalog_views_round_trip.rs  checkpoint_round_trip.rs  column_cache_aborted_writer_round_trip.rs  column_cache_coherence_round_trip.rs  columnar_storage_round_trip.rs  comment_restart_round_trip.rs  composite_type_round_trip.rs  constraint_round_trip.rs  copy_defaults_round_trip.rs  copy_index_constraint_round_trip.rs  copy_restart_round_trip.rs  copy_round_trip.rs  copy_txn_round_trip.rs  core_type_surface_round_trip.rs  create_index_types_round_trip.rs  create_statistics_round_trip.rs  cross_join_round_trip.rs  cte_round_trip.rs  cursor_round_trip.rs  date_column_round_trip.rs  default_boot_smoke_round_trip.rs  delete_concurrency_round_trip.rs  describe_round_trip.rs  distinct_round_trip.rs  domain_type_round_trip.rs  (+112 more)
crates/ultrasql-sqllogictest-runner/: Cargo.toml
crates/ultrasql-sqllogictest-runner/src/: benchmark.rs  cli.rs  main.rs  model.rs  parser.rs  runner.rs  target.rs  tests.rs
crates/ultrasql-storage/: Cargo.toml
crates/ultrasql-storage/benches/: buffer_pool.rs  (+3 more)
crates/ultrasql-txn/: Cargo.toml
crates/ultrasql-vec/: Cargo.toml
crates/ultrasql-wal/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parser_fuzz.rs  planner_fuzz.rs  protocol_fuzz.rs  wal_record_fuzz.rs
(+1444 files in other folders)
