[package]
name = "ultrasql-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys    = "0.4"
ultrasql-parser  = { path = "../crates/ultrasql-parser" }

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false
doc  = false
bench = false
