[package]
name        = "ultrasql-arrow"
description = "UltraSQL Apache Arrow record batch import and export bridge."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
ultrasql-vec  = { workspace = true }
arrow-array   = { workspace = true }
arrow-buffer  = { workspace = true }
arrow-schema  = { workspace = true }
thiserror     = { workspace = true }
