[package]
name        = "ultrasql-bench"
description = "UltraSQL benchmark harness: TPC-B, TPC-C, TPC-H, micro-benchmarks."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish = false
# Disable auto-discovery so a work-in-progress .rs file in src/bin/
# does not turn into a bin until it is explicitly registered below.
autobins = false

[features]
# Enables the PostgreSQL execution path in tpch::runner and tpch::load,
# pulling in tokio-postgres. Off by default so the crate builds cleanly
# without a running Postgres instance.
pg-runner = ["dep:tokio-postgres", "dep:chrono"]

[lints]
workspace = true

[[bin]]
name = "ultrasql-bench"
path = "src/main.rs"

[[bin]]
name = "cross_compare"
path = "src/bin/cross_compare.rs"

[[bin]]
name = "cross_compare_writes"
path = "src/bin/cross_compare_writes.rs"

[[bin]]
name = "cross_concurrency"
path = "src/bin/cross_concurrency.rs"

[[bin]]
name = "point_lookup"
path = "src/bin/point_lookup.rs"

[[bin]]
name = "regression-gate"
path = "src/bin/regression_gate.rs"

[[bin]]
name = "tpch"
path = "src/bin/tpch.rs"

[[bin]]
name = "readme-render"
path = "src/bin/readme_render.rs"

[dependencies]
ultrasql-core     = { workspace = true }
ultrasql-protocol = { workspace = true }
ultrasql-vec      = { workspace = true }
ultrasql-storage  = { workspace = true }
ultrasql-wal      = { workspace = true }
anyhow            = { workspace = true }
clap              = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sha2              = { workspace = true }
tempfile          = { workspace = true }
# Optional deps gated behind the pg-runner feature.
tokio-postgres    = { version = "0.7", optional = true }
chrono            = { workspace = true, optional = true }
