[package]
name        = "ultrasql-bench"
description = "UltraSQL benchmark harness: TPC-B, TPC-C, TPC-H, micro-benchmarks."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
publish = false
# Disable auto-discovery so a work-in-progress .rs file in src/bin/
# does not turn into a bin until it is explicitly registered below.
autobins = false

[features]
# Enables the PostgreSQL execution path in tpch::runner and tpch::load,
# pulling in tokio-postgres. Off by default so the crate builds cleanly
# without a running Postgres instance.
pg-runner = ["dep:tokio-postgres", "dep:chrono", "dep:bytes", "dep:futures"]
# Enables the wire-protocol cross-engine benchmark driver
# (`cross_compare_sql`): spawns an in-process `ultrasqld` and connects
# via `tokio-postgres` so UltraSQL is measured through the same SQL
# pipeline that production clients use. Off by default because it
# pulls the full server stack into the bench crate's dependency graph.
sql-bench = [
    "pg-runner",
    "dep:bytes",
    "dep:futures",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:parquet",
    "dep:ultrasql-objectstore",
    "dep:ultrasql-catalog",
    "dep:ultrasql-server",
    "dep:ultrasql-txn",
]

[lints]
workspace = true

[[bin]]
name = "ultrasql-bench"
path = "src/main.rs"

[[bin]]
name = "vector_recall_sweep"
path = "src/bin/vector_recall_sweep.rs"

[[bin]]
name = "cross_compare"
path = "src/bin/cross_compare.rs"

[[bin]]
name = "cross_compare_writes"
path = "src/bin/cross_compare_writes.rs"

[[bin]]
name = "cross_concurrency"
path = "src/bin/cross_concurrency.rs"

[[bin]]
name = "point_lookup"
path = "src/bin/point_lookup.rs"

[[bin]]
name = "regression-gate"
path = "src/bin/regression_gate.rs"

[[bin]]
name = "tpch"
path = "src/bin/tpch.rs"

[[bin]]
name = "readme-render"
path = "src/bin/readme_render.rs"

[[bin]]
name = "results-render"
path = "src/bin/results_render.rs"

[[bin]]
name = "cross_compare_sql"
path = "src/bin/cross_compare_sql.rs"
required-features = ["sql-bench"]

[[bench]]
name    = "v07_vectorized"
path    = "benches/v07_vectorized.rs"
harness = false

[[bench]]
name    = "push_vs_pull"
path    = "benches/push_vs_pull.rs"
harness = false

[dependencies]
ultrasql-core     = { workspace = true }
ultrasql-protocol = { workspace = true }
ultrasql-vec      = { workspace = true }
ultrasql-storage  = { workspace = true }
ultrasql-wal      = { workspace = true }
ultrasql-catalog  = { workspace = true, optional = true }
ultrasql-objectstore = { workspace = true, optional = true }
ultrasql-txn      = { workspace = true, optional = true }
anyhow            = { workspace = true }
arrow-array       = { workspace = true, optional = true }
arrow-schema      = { workspace = true, optional = true }
bytes             = { workspace = true, optional = true }
clap              = { workspace = true }
futures           = { workspace = true, optional = true }
num-traits        = { workspace = true }
parquet           = { workspace = true, optional = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sha2              = { workspace = true }
tempfile          = { workspace = true }
# Optional deps gated behind the pg-runner / sql-bench features.
tokio-postgres    = { version = "0.7.18", optional = true }
chrono            = { workspace = true, optional = true }
ultrasql-server   = { workspace = true, optional = true }

[dev-dependencies]
ultrasql-executor = { workspace = true }
ultrasql-mvcc     = { workspace = true, features = ["testing"] }
ultrasql-planner  = { workspace = true }
criterion         = { workspace = true }
