[package]
name        = "ultrasql-catalog"
description = "UltraSQL system catalog: schemas, tables, indexes, statistics."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
parking_lot   = { workspace = true }
dashmap       = { workspace = true }
arc-swap      = { workspace = true }
ahash         = { workspace = true }
smallvec      = { workspace = true }
tracing       = { workspace = true }
