[package]
name        = "ultrasql-catalog"
description = "UltraSQL system catalog: schemas, tables, indexes, statistics."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[features]
# Expose test helpers (e.g. InMemoryLoader) for downstream crates.
testing = ["ultrasql-storage/testing"]

[dependencies]
ultrasql-core    = { workspace = true }
ultrasql-mvcc    = { workspace = true }
ultrasql-storage = { workspace = true }
thiserror        = { workspace = true }
parking_lot      = { workspace = true }
dashmap          = { workspace = true }
arc-swap         = { workspace = true }
ahash            = { workspace = true }
smallvec         = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
criterion        = { workspace = true }
ultrasql-storage = { workspace = true, features = ["testing"] }

[[bench]]
name    = "persistent_catalog"
harness = false
