[package]
name        = "ultrasql-cli"
description = "UltraSQL command-line client (psql-compatible)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "ultrasql"
path = "src/main.rs"

[dependencies]
ultrasql-core     = { workspace = true }
ultrasql-protocol = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
clap              = { workspace = true }
