[package]
name        = "ultrasql-cli"
description = "UltraSQL command-line client."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "ultrasql"
path = "src/main.rs"

[[bin]]
name = "ultrasql-local"
path = "src/bin/ultrasql-local.rs"

[dependencies]
ultrasql-core     = { workspace = true }
ultrasql-protocol = { workspace = true }
ultrasql-wal      = { workspace = true }
ultrasql-server   = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
libc              = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
rustyline          = { workspace = true }
tokio-postgres     = { workspace = true }
tempfile           = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
