[package]
name        = "ultrasql-core"
description = "UltraSQL foundational types: errors, scalar values, schema, identifiers."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
thiserror   = { workspace = true }
bytes       = { workspace = true }
byteorder   = { workspace = true }
smallvec    = { workspace = true }
ahash       = { workspace = true }
xxhash-rust = { workspace = true }
libc        = { workspace = true }
chrono      = { workspace = true }
chrono-tz   = { workspace = true }
num-traits  = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
rstest   = { workspace = true }
