[package]
name        = "ultrasql-executor"
description = "UltraSQL physical execution engine: pipeline-breakers, push-based execution, vectorized operators."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core      = { workspace = true }
ultrasql-storage   = { workspace = true }
ultrasql-mvcc      = { workspace = true }
ultrasql-txn       = { workspace = true }
ultrasql-vec       = { workspace = true }
ultrasql-optimizer = { workspace = true }
ultrasql-catalog   = { workspace = true }
ultrasql-planner   = { workspace = true }
thiserror          = { workspace = true }
crossbeam          = { workspace = true }
smallvec           = { workspace = true }
tracing            = { workspace = true }
ahash              = { workspace = true }
num-traits         = { workspace = true }
tempfile           = { workspace = true }

[dev-dependencies]
criterion           = { workspace = true }
proptest            = { workspace = true }
parking_lot         = { workspace = true }
ultrasql-mvcc       = { workspace = true, features = ["testing"] }
ultrasql-storage    = { workspace = true, features = ["testing"] }

[[bench]]
name    = "v05_operators"
path    = "benches/v05_operators.rs"
harness = false
