[package]
name        = "ultrasql-iceberg"
description = "UltraSQL read-only Apache Iceberg table metadata planning."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core        = { workspace = true }
ultrasql-objectstore = { workspace = true }
apache-avro          = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
