[package]
name        = "ultrasql-mvcc"
description = "UltraSQL MVCC: transaction IDs, tuple visibility, snapshots."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
parking_lot   = { workspace = true }
crossbeam     = { workspace = true }
smallvec      = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
