[package]
name        = "ultrasql-mvcc"
description = "UltraSQL MVCC: transaction IDs, tuple visibility, snapshots."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
parking_lot   = { workspace = true }
crossbeam     = { workspace = true }
smallvec      = { workspace = true }
tracing       = { workspace = true }

[features]
# Exposes the in-memory `MapOracle` so downstream crates can drive
# visibility tests without bringing up a real CLOG.
testing = []

[dev-dependencies]
proptest = { workspace = true }
