[package]
name        = "ultrasql-objectstore"
description = "UltraSQL object-storage URI expansion and synchronous object reads."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
ureq      = { workspace = true }
hmac      = { workspace = true }
sha2      = { workspace = true }
hex       = { workspace = true }
chrono    = { workspace = true }
