[package]
name        = "ultrasql-parser"
description = "UltraSQL SQL lexer and parser. PostgreSQL-compatible dialect."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core = { workspace = true }
thiserror     = { workspace = true }
smallvec      = { workspace = true }
ahash         = { workspace = true }
once_cell     = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest   = { workspace = true }
