[package]
name        = "ultrasql-planner"
description = "UltraSQL logical planner: AST → bound plan → logical plan tree."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
ultrasql-core    = { workspace = true }
ultrasql-parser  = { workspace = true }
ultrasql-catalog = { workspace = true }
ultrasql-objectstore = { workspace = true }
ultrasql-iceberg = { workspace = true }
thiserror        = { workspace = true }
smallvec         = { workspace = true }
tracing          = { workspace = true }
parquet          = { workspace = true }
arrow-ipc        = { workspace = true }
arrow-schema     = { workspace = true }
bytes            = { workspace = true }
serde_json       = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
